edit js hrome browser

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
   <body>
 
     <!-- С бэкграундом не понял в полной мере его поведение -->
-    <!-- <div class="wrap"> -->
+    <div class="wrap">
+
     <div class="calc-block text-center">
       <a href="/calc.php">калькулятор</a>
     </div>
@@ -119,7 +120,7 @@ a password every time you use the site
 	Данное разрешение считается редко используемым,<br><span>слишком редким</span><br>для просмотра такого контента.Потому сайт не поддерживает это разрешение, Рекомендуем купить гаджет с более большим разрешением. 
 </div>
 
-  <!-- </div>  end wrap -->
+ </div> <!--   end wrap -->
 
 
     <!-- Optional JavaScript; choose one of the two! -->
